# vonshlovens

./: .dockerignore  .gitignore  AGENTS.md  BEADS_AGENT_COMPAT_PLAN.md  CLAUDE.md  CURSOR_TODO_LIST.md  DEPLOYMENT.md  Dockerfile  README.md  TODO_LIST.md  docker-compose.yml  kanban.yaml  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: launch.json  settings.json
.claude/skills/drizzle-schema-changes/: SKILL.md
.claude/skills/file/: SKILL.md
.claude/skills/svelte5-gotchas/: SKILL.md
.github/workflows/: deno-sveltekit-tutorial-AutoDeployTrigger-9914c926-c8d9-47de-ab33-a31e4b793562.yml  deploy.yml  vonshlovens-AutoDeployTrigger-4c7ac59a-ebef-40d8-9c77-0e6db8732811.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/types/: route_meta_data.json
docs/: README.md  init-design.md  vps-prep-prompt.md
my-app/: package.json
my-app/src/: app.css
notes/: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  garage.toml
notes/api/: .dockerignore  .env.example  Cargo.toml  Dockerfile
notes/api/migrations/: 20260502000001_initial_schema.sql
notes/api/src/: config.rs  health.rs  main.rs  state.rs
notes/docs/adr/: README.md  (+7 more)
notes/scripts/: bootstrap-garage.sh
specs/: README.md  deployment.md  design.md  notes-admin.md  notes-api-deployment.md  notes-data-model.md  notes-plugin.md  notes-storage.md  notes-sync-api.md  notes.md  routing.md  security.md  stack.md
src/: app.css  app.html
src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
(+80 files in other folders)
